fix: zoom in feature-photo images by 50% to eliminate white space
- Added transform: scale(1.5) to feature-photo images
- This zooms in the image to better fill the container
- Should eliminate white space on top/bottom of Nature's Classroom image

--- a/app/styles/carousel-brochure.css
+++ b/app/styles/carousel-brochure.css
@@ -630,6 +630,7 @@ p {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  transform: scale(1.5);
 }
 
 /* Schedule Styles */
